--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 header{
     background-color: lightskyblue;
     color: white;
-    padding:.75em;
+    padding: 0.4em;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #logo {
     float: left;
+    margin-left: 15px;
+    margin-top: 10px;
 }
 
 h1{
- text-align: center;
+   text-align: center;
 }
 
 nav{
@@ -21,7 +23,8 @@ nav{
 
 ul{
     text-align: right;
-    margin-top: -5px;
+
+
 }
 li{
     display: inline;
@@ -56,4 +59,19 @@ li{
 
 .back{
     position: absolute; top: 0px; left: 0px;
+}
+.stats{
+    text-align: center;
+}
+.attempts > .value{
+    color:blue;
+    font-size: 20px;
+}
+.accuracy > .value{
+    color:blue;
+    font-size: 20px;
+}
+.games-played > .value{
+    color:blue;
+    font-size: 20px;
 }
